@@ -690,6 +690,7 @@
 #define STRING_EVAL_UNSUPPORTED      "Operador no soportado '{1}'."
 #define STRING_EVAL_OP_EXPECTED      "Se esperaba operador."
 #define STRING_EVAL_NO_EVAL          "La expresión podría no ser evaluada."
+#define STRING_EVAL_NOT_EXPRESSION   "The value is not an expression."
 #define STRING_PAREN_MISMATCH        "Paréntesis desemparejados en expresión"
 
 // edit
